--- a/.github/workflows/collection-continuous-integration.yml
+++ b/.github/workflows/collection-continuous-integration.yml
@@ -17,7 +17,7 @@ jobs:
         ansible-version:
           - git+https://github.com/ansible/ansible.git@stable-2.10
         runner-python-version:
-          - 3.7
+          - 3.8
     steps:
       - name: Check out ${{ github.repository }} on disk
         uses: actions/checkout@master
@@ -57,32 +57,35 @@ jobs:
         runner-os:
           - ubuntu-latest
         runner-python-version:
-          - 3.7
+          - 3.8
         ansible-version:
           - ansible<2.10
-          - ansible<2.11
+          - ansible-base<2.11
           - git+https://github.com/ansible/ansible.git@devel
         python-version:
-          - 2.7
-          - 3.7
+          - 3.8
         exclude:
           - runner-os: ubuntu-latest
-            runner-python-version: 3.7
+            runner-python-version: 3.8
             ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: 3.7
+            python-version: 3.8
           - runner-os: ubuntu-latest
-            runner-python-version: 3.7
-            ansible-version: ansible<2.11
-            python-version: 3.7
+            runner-python-version: 3.8
+            ansible-version: ansible-base<2.11
+            python-version: 3.8
         include:
+          - runner-os: ubuntu-latest
+            runner-python-version: 2.7
+            ansible-version: ansible<2.10
+            python-version: 2.7
           - runner-os: ubuntu-20.04
             runner-python-version: 3.8
             ansible-version: git+https://github.com/ansible/ansible.git@devel
             python-version: 3.8
           - runner-os: ubuntu-20.04
-            runner-python-version: 3.7
-            ansible-version: ansible<2.11
-            python-version: 3.7
+            runner-python-version: 3.8
+            ansible-version: ansible-base<2.11
+            python-version: 3.8
 
     steps:
       - name: Set up Python ${{ matrix.runner-python-version }}
