Fix idempotency for multiple ports

--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
@@ -34,6 +34,8 @@
       - "127.0.0.1:12122:8876/udp"
       - "127.0.0.1:13122:8871/tcp"
       - "127.0.0.1:43423:8872"
+      - "127.0.0.2:43423:8872/tcp"
+      - "127.0.0.3:43423:8872"
   register: test2
 
 - name: check test2
@@ -54,6 +56,8 @@
       - "127.0.0.1:12122:8876/udp"
       - "127.0.0.1:13122:8871/tcp"
       - "127.0.0.1:43423:8872"
+      - "127.0.0.2:43423:8872/tcp"
+      - "127.0.0.3:43423:8872"
   register: test3
 
 - name: check test3
