--- a/.github/workflows/podman_pod_info.yml
+++ b/.github/workflows/podman_pod_info.yml
@@ -7,6 +7,7 @@ on:
       - 'ci/*.yml'
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_pod_info.yml'
+      - 'plugins/module_utils/podman/podman_pod_lib.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod_info/**'
@@ -18,6 +19,7 @@ on:
       - 'ci/*.yml'
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_pod_info.yml'
+      - 'plugins/module_utils/podman/podman_pod_lib.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod_info/**'
