--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -218,3 +218,17 @@ releases:
       - Fixes for podman_container for Podman v3
       release_summary: Fixes for newest version 3 of Podman
     release_date: '2021-03-01'
+  1.4.5:
+    changes:
+      bugfixes:
+      - Add IPv6 support for publishing ports
+      - Add sigrtmin+3 signal (required for systemd containers)
+      - Add support for Podman Pod restart
+      - Convert IPv6 to shorten form
+      - Fix error with images info where no images
+      - Fix idempotency for rootless networks from v3
+      - Fix no_log for newer ansible-test
+      - Fix uppercase labels idempotency issue
+      - Stop pods without recreating them
+      release_summary: Additional fixes for newest version 3 of Podman
+    release_date: '2021-04-02'
