--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: containers
 name: podman
-version: 1.5.0
+version: 1.5.1-dev
 readme: README.md
 authors:
   - Sagi Shnaidman <sshnaidm@redhat.com>
