--- a/.github/workflows/connections_tests.yml
+++ b/.github/workflows/connections_tests.yml
@@ -31,11 +31,11 @@ jobs:
     strategy:
       matrix:
         runner-os:
-          - ubuntu-latest
+          - ubuntu-20.04
         ansible-version:
-          - git+https://github.com/ansible/ansible.git@devel
+          - git+https://github.com/ansible/ansible.git@stable-2.11
         runner-python-version:
-          - 3.7
+          - 3.8
     steps:
       - name: Check out ${{ github.repository }} on disk
         uses: actions/checkout@master
@@ -65,10 +65,10 @@ jobs:
           path: .cache/collection-tarballs
 
   test-podman-connection:
-    name: Podman connection VM ${{ matrix.os || 'ubuntu-latest' }}-${{ matrix.ansible-version }}
+    name: Podman connection VM ${{ matrix.os || 'ubuntu-20.04' }}-${{ matrix.ansible-version }}
     needs:
       - build-collection-artifact-connection-tests
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.os || 'ubuntu-20.04' }}
     defaults:
       run:
         shell: bash
@@ -77,22 +77,20 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@stable-2.10
+          - git+https://github.com/ansible/ansible.git@stable-2.11
+          - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-latest
+          - ubuntu-20.04
           #- ubuntu-20.04
           #- ubuntu-16.04
           #- macos-latest
         python-version:
-          #- 3.8
-          - 3.7
+          - 3.8
+          #- 3.7
           #- 3.6
           #- 3.5
           #- 2.7
-        include:
-          - os: ubuntu-20.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: 3.7
+
     steps:
 
       - name: Check out repository
@@ -158,10 +156,10 @@ jobs:
         shell: bash
 
   test-buildah-connection:
-    name: Buildah connection VM ${{ matrix.os || 'ubuntu-latest' }}-${{ matrix.ansible-version }}
+    name: Buildah connection VM ${{ matrix.os || 'ubuntu-20.04' }}-${{ matrix.ansible-version }}
     needs:
       - build-collection-artifact-connection-tests
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.os || 'ubuntu-20.04' }}
     defaults:
       run:
         shell: bash
@@ -170,22 +168,20 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@stable-2.10
+          - git+https://github.com/ansible/ansible.git@stable-2.11
+          - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-latest
+          - ubuntu-20.04
           #- ubuntu-20.04
           #- ubuntu-16.04
           #- macos-latest
         python-version:
-          #- 3.8
-          - 3.7
+          - 3.8
+          #- 3.7
           #- 3.6
           #- 3.5
           #- 2.7
-        include:
-          - os: ubuntu-20.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: 3.7
+
     steps:
 
       - name: Check out repository
